manifests/observability/deploy-alloy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alloy
  name: alloy
  namespace: observability
spec:
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      securityContext:
        fsGroup: 473
        supplementalGroups:
          - 0
      containers:
        - name: alloy
          image: alloy
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          env: []
          volumeMounts: 
            - mountPath: /etc/alloy/config.alloy
              name: alloy-config
              subPath: config.alloy
            - mountPath: /var/host-logs
              name: host-logs
              readOnly: true
            - mountPath: /var/secrets/PASSWORD
              name: loki-secrets
              subPath: PASSWORD
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config  
        - name: host-logs
          hostPath: 
            path: /var/log
            type: Directory
        - name: loki-secrets
          secret:
            secretName: loki-secrets
