manifests/observability/deploy-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: observability
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 400Mi
            limits:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/run/secrets/grafana
              name: grafana-secrets
            - mountPath: /etc/cluster-oidc-endpoints
              name: cluster-oidc-endpoints
            - mountPath: /etc/grafana/grafana.ini
              name: grafana-config
              subPath: grafana.ini
            - mountPath: /var/lib/grafana
              name: grafana-pv
            - name: ca-certificates
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
      volumes:
        - name: domain-tls
          secret:
            secretName: domain-tls
        - name: ca-certificates
        - name: grafana-secrets
          secret:
            secretName: grafana-secrets
        - name: cluster-oidc-endpoints
          secret:
            secretName: cluster-oidc-endpoints
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
